--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "new-paper-datatable-api",
   "main": "new-paper-datatable-api.html",
+  "version": "0.0.1",
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "paper-styles": "^2.1.0",
