--- a/bower.json
+++ b/bower.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "paper-styles": "^2.1.0",
-    "paper-listbox": "^2.1.1",
-    "paper-item": "^2.1.1",
-    "paper-icon-button": "^2.2.0",
+    "paper-listbox": "PolymerElements/paper-listbox#^3.0.1",
+    "paper-item": "PolymerElements/paper-item#^3.0.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^3.0.1",
     "paper-dropdown-menu": "^2.1.0",
-    "paper-input": "^2.2.3"
+    "paper-input": "^2.2.3",
+    "iron-icons": "PolymerElements/iron-icons#^3.0.1",
+    "iron-icon": "PolymerElements/iron-icon#^3.0.1",
+    "paper-menu-button": "PolymerElements/paper-menu-button#^3.0.1"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
@@ -19,6 +22,11 @@
     "paper-input": "^2.2.3"
   },
   "resolutions": {
-    "polymer": "^2.0.0"
+    "polymer": "^2.0.0",
+    "paper-icon-button": "^2.2.0",
+    "paper-menu-button": "1 - 2",
+    "paper-listbox": "^2.1.1",
+    "paper-item": "^2.1.1",
+    "iron-icon": "1 - 2"
   }
 }
