--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "paper-datatable-api",
   "description": "A material design implementation of a data table",
-  "version": "0.0.13",
   "keywords": [
     "web-component",
     "web-components",
@@ -10,10 +8,12 @@
     "grid",
     "table"
   ],
+  "name": "paper-datatable-api",
+  "version": "0.0.13",
   "maintainers": [
     {
       "name": "Julien Rousseau - RoXuS",
-      "email": "",
+      "email": "jrousseau@doubletrade.com",
       "web": ""
     }
   ],
@@ -25,10 +25,35 @@
     "eslint-plugin-html": "^3.2.2",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
-    "web-component-tester": "^6.0.0"
+    "web-component-tester": "^6.0.0",
+    "@polymer/iron-demo-helpers": "^3.0.0",
+    "wct-browser-legacy": "^1.0.1",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "@polymer/iron-ajax": "^3.0.0",
+    "@polymer/paper-input": "^3.0.0"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.14.0",
-    "gulp-babel": "^6.1.2"
-  }
+    "@polymer/app-localize-behavior": "^3.0.0",
+    "@polymer/iron-icon": "^3.0.0",
+    "@polymer/iron-icons": "^3.0.0",
+    "@polymer/paper-dropdown-menu": "^3.0.0",
+    "@polymer/paper-icon-button": "^3.0.0",
+    "@polymer/paper-input": "^3.0.0",
+    "@polymer/paper-item": "^3.0.0",
+    "@polymer/paper-listbox": "^3.0.0",
+    "@polymer/paper-menu-button": "^3.0.0",
+    "@polymer/paper-radio-button": "^3.0.0",
+    "@polymer/paper-radio-group": "^3.0.0",
+    "@polymer/paper-styles": "^3.0.0",
+    "@polymer/paper-tooltip": "^3.0.0",
+    "@polymer/polymer": "^3.0.0",
+    "web-animations-js": "^2.3.1"
+  },
+  "resolutions": {
+    "inherits": "2.0.3",
+    "samsam": "1.1.3",
+    "supports-color": "3.1.2",
+    "type-detect": "1.0.0"
+  },
+  "main": "paper-datatable-api.js"
 }
