--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@polymer/paper-styles": "^3.0.0",
     "@polymer/paper-tooltip": "^3.0.0",
     "@polymer/polymer": "^3.0.0",
-    "web-animations-js": "^2.3.1"
+    "web-animations-js": "^2.3.1",
+    "@doubletrade/range-datepicker": "git+https://git@github.com/roxus/range-datepicker.git#master"
   },
   "resolutions": {
     "inherits": "2.0.3",
