--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@polymer/paper-tooltip": "^3.0.0",
     "@polymer/polymer": "^3.0.0",
     "web-animations-js": "^2.3.1",
-    "@doubletrade/range-datepicker": "git+https://git@github.com/roxus/range-datepicker.git#master"
+    "@doubletrade/range-datepicker": "0.0.32"
   },
   "resolutions": {
     "inherits": "2.0.3",
